Adding tests related to the following GLASSFISH issues GLASSFISH-15749, GLASSFISH-15735 and GLASSFISH-15721.
svn path=/trunk/; revision=44821


Former-commit-id: a48403a9e2ef109f44c17414801784cd0cfde23a